Fixing more links in files, sort of a pain in the ass and should add a helper. Removed some stupid border styling.

--- a/docs/0.3.9/API reference.md.hbs
+++ b/docs/0.3.9/API reference.md.hbs
@@ -5,32 +5,32 @@ section: APIReference
 
 ### ractive = new Ractive( *options* )
 
-Create a new Ractive instance. See [[Initialisation options]] for a breakdown of the available (and required) options.
+Create a new Ractive instance. See <a href="{{relative absolute 'latest/initialisation-options'}}">Initialisation Options</a> for a breakdown of the available (and required) options.
 
 ## Instance methods
 
 ## Instance properties
 
-* [[ractive.nodes]]
-* [ractive.transitions](ractive.transitions %28instance%29)
-* [ractive.partials](ractive.partials %28instance%29)
+* <a href="{{relative absolute 'latest/ractive-nodes'}}">ractive.nodes</a>
+* <a href="{{relative absolute 'latest/ractive-transitions'}}">ractive.transitions</a>
+* <a href="{{relative absolute 'latest/ractive-partials-instance'}}">ractive.parials</a>
 
 
 ## Instance events
 
-See [[Events]].
+See <a href="{{relative absolute 'latest/events'}}">Events</a>.
 
 ## Static methods
 
-* [[Ractive.parse()]]
-* [[Ractive.extend()]]
+* <a href="{{relative absolute 'latest/ractive-parse'}}">Ractive.parse()</a>
+* <a href="{{relative absolute 'latest/ractive-extend'}}">Ractive.extend()</a>
 ...more to come...
 
 ## Plugins and shared properties
 
-* [[Ractive.adaptors]]
-* [[Ractive.eventDefinitions]]
-* [[Ractive.easing]]
-* [Ractive.partials](Ractive.partials %28global%29)
-* [Ractive.transitions](Ractive.transitions %28global%29)
+* <a href="{{relative absolute 'latest/adaptors'}}">Adapators</a>
+* <a href="{{relative absolute 'latest/events'}}">Ractive.eventDefinitions</a>
+* <a href="{{relative absolute 'latest/ractive-easing'}}">Ractive.easing</a>
+* <a href="{{relative absolute 'latest/partials'}}">Partials</a>
+* <a href="{{relative absolute 'latest/transitions'}}">Transitions</a>
 ...more to come...
