--- a/templates/partials/left-nav.md.hbs
+++ b/templates/partials/left-nav.md.hbs
@@ -28,7 +28,7 @@
 	<li><a href="{{relative absolute 'latest/ractive-extend'}}">Ractive.extend()</a></li>
 </ul>
 <h4><a href="{{relative absolute 'latest/ractive-extend'}}">Plugins</a></h4>
-<h4>Templating</h4>
+<h4><a href="{{relative absolute 'latest/templates'}}">Templating</a></h4>
 <ul>
 	<li><a href="{{relative absolute 'latest/templates'}}">Templates</a></li>
 	<li><a href="{{relative absolute 'latest/mustaches'}}">Mustaches</a></li>
@@ -39,6 +39,7 @@
 <h4><a href="{{relative absolute 'latest/decorators'}}">Decorators</a></h4>
 <h4><a href="{{relative absolute 'latest/dependants'}}">Dependants</a></h4>
 <h4><a href="{{relative absolute 'latest/expressions'}}">Expressions</a></h4>
+<h4><a href="{{relative absolute 'latest/events'}}">Events</a></h4>
 <h4><a href="{{relative absolute 'latest/keypaths'}}">Keypaths</a></h4>
 <h4><a href="{{relative absolute 'latest/magic-mode'}}">Magic Mode</a></h4>
 <h4><a href="{{relative absolute 'latest/observers'}}">Observers</a></h4>
